Fix reference three showcase columns on mobile

--- a/content/themes/dude/sass/views/_reference.scss
+++ b/content/themes/dude/sass/views/_reference.scss
@@ -739,6 +739,10 @@ body {
             @include background-cover();
             height: 430px;
             margin-bottom: 39px;
+
+            @media(max-width: $container-ipad) {
+              @include stack();
+            }
           }
 
           .container {
